--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,51 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.immagine{
+    width: 60%;
+    height: 70%;
+    background-color: aqua;
+    position: relative;
+}
+
+.item{
+    width: 100%;
+    height: 100%;
+}
+
+.item img{
+    width: 100%;
+    height: 100%;
+    /* object-fit: cover; */
+}
+
+.up , .down{
+    height: 25px;
+    width: 25px;
+    font-size: 15px;
+    padding: 4px;
+    border-radius: 50%;
+    background-color: lightgray;
+    color: rgb(91, 89, 89);
+}
+
+.up{
+    position: absolute;
+    top: 0;
+    left: 50%;
+}
+
+.down{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+}
